# langgraph-training

./: 01_First_Graph.ipynb  pyproject.toml
Foundations/: 01_Python_Decorators.ipynb  02_Python_Args_Kwargs.ipynb
LangChainDocs/: 01_QuickStart.ipynb
Lessons/: 01_First_Graph.ipynb  02_Pydantic_Graph.ipynb
