[project]
name = "langgraph-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "openai>=2.44.0",
    "typing>=3.10.0.0",
]
